# dragons_worms

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Engine/: CMakeLists.txt  Engine.cpp  Engine.h
Engine/Animator/: Animation.hpp  AnimatorController.hpp  HitAnimation.hpp  IdleAnimation.hpp
Engine/AssetManager/: AssetManager.cpp  AssetManager.h
Engine/AssetManagerTemp/: AssetManagerTemp.cpp  AssetManagerTemp.h
Engine/Config/: Config.hpp
Engine/ECS/: Animator.hpp  BoxCollider2D.h  Collider2D.h  Component.h  Dragon.h  ECS.h  Entity.h  EntityManager.cpp  EntityManager.h  Explosion.h  Fireball.h  Ground.h  Input.h  LifeBar.h  MapBoundaries.h  PlayerInterface.h  PolygonCollider2D.cpp  PolygonCollider2D.h  RigidBody.cpp  RigidBody.h  RigidBody2.cpp  RigidBody2.h  SphereCollider2D.cpp  SphereCollider2D.h  Sprite.h  SpriteRenderer.h  Transform.h  TriangleCollider2D.h  Weapon.h  WindHandler.h
Engine/Map/: Map.cpp  Map.hpp
Engine/Physics/: Collision.cpp  Collision.h  ECollisionType.h  World.cpp  World.h
Engine/Scene/: InGameScene.cpp  InGameScene.h  InGameScene.hpp  MainMenuScene.cpp  MainMenuScene.h  MainMenuScene.hpp  Scene.cpp  Scene.hpp
Engine/Scene/Menu/: Menu.cpp  Menu.hpp  MenuManager.cpp  MenuManager.hpp
Engine/UI/: UI.cpp  UI.hpp
Engine/Utils/: Vect2D.h  Vectormath.h
Game/: CMakeLists.txt  Dragons.cpp  Game.cpp  Game.hpp  InputHandler.cpp  InputHandler.hpp  dragons.hpp  main.cpp
scripts/: linux-install.sh  windows-install.bat
